--- a/sass/style.sass
+++ b/sass/style.sass
@@ -25,3 +25,24 @@ header
 			font-size: 17px
 			margin: 0 auto
 			margin-top: 120px
+.weWait
+	padding-top: 120px
+	position: relative
+	.line
+		position: absolute
+		top: 33px
+		left: 20px
+	h6
+		text-transform: uppercase
+		font-size: 16px
+		color: #b7a176
+		margin-left: 85px
+	h1
+		font-size: 33px
+		margin-left: 85px
+		margin-bottom: 45px
+	a 
+		font-size: 17px
+		text-transform: uppercase
+		color: #b7a176
+		padding-right: 10px
