--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,3 +1,12 @@
+h1
+	font-size: 33px
+	margin-left: 85px
+	margin-bottom: 45px
+h6
+	text-transform: uppercase
+	font-size: 16px
+	color: #b7a176
+	margin-left: 85px
 header 
 	background-image: url("../img/top_bg.png")
 	height: 100vh
@@ -27,22 +36,39 @@ header
 			margin-top: 120px
 .weWait
 	padding-top: 120px
+	padding-bottom: 120px
 	position: relative
 	.line
 		position: absolute
 		top: 33px
 		left: 20px
-	h6
-		text-transform: uppercase
-		font-size: 16px
-		color: #b7a176
-		margin-left: 85px
-	h1
-		font-size: 33px
-		margin-left: 85px
-		margin-bottom: 45px
 	a 
 		font-size: 17px
 		text-transform: uppercase
 		color: #b7a176
 		padding-right: 10px
+.advantages
+	position: relative
+	padding-top: 90px
+	padding-bottom: 100px
+	background-image: url("../img/bg_2.png")
+	h1
+		color: #b7a176
+	.line
+		position: absolute
+		top: 7px
+		left: 20px
+	p
+		color: #fff
+	.icon 
+		border-left: 1px solid #b7a176
+		border-right: 1px solid #b7a176
+		width: 100%
+		height: 114px
+		display: block
+		margin-top: 70%
+		p 
+			text-align: center
+		img
+			display: block
+			margin: 0 auto
