--- a/sass/style.sass
+++ b/sass/style.sass
@@ -7,6 +7,16 @@ h6
 	font-size: 16px
 	color: #b7a176
 	margin-left: 85px
+a 
+	font-size: 17px
+	text-transform: uppercase
+	color: #b7a176
+	padding-right: 10px
+	display: inline-block
+.norm
+	text-align: left
+	a 
+		text-align: left
 header 
 	background-image: url("../img/top_bg.png")
 	height: 100vh
@@ -42,11 +52,6 @@ header
 		position: absolute
 		top: 33px
 		left: 20px
-	a 
-		font-size: 17px
-		text-transform: uppercase
-		color: #b7a176
-		padding-right: 10px
 .advantages
 	position: relative
 	padding-top: 90px
@@ -72,3 +77,49 @@ header
 		img
 			display: block
 			margin: 0 auto
+			305 410
+
+.about
+	margin-top: 100px
+	.img 
+		width: 305px
+		height: 410px
+	h2
+		color: #b7a176
+		font-size: 16px
+		text-transform: uppercase
+	h5 
+		font-size: 33px
+		margin-bottom: 40px
+	a 
+		padding-right: 0
+		padding-top: 20px
+		text-align: left
+	.block_2
+		text-align: center
+		padding-top: 160px
+		.img 
+			img 
+				width: 285px
+				height: 300px
+		.center
+			color: #000
+			padding-top: 90px
+			a 
+				padding-top: 10px
+	h6
+		color: #000
+		margin-left: 0
+	.block_3
+		text-align: center
+		height: 300px
+		p 
+			margin-top: 20px
+		h6
+			font-size: 20px
+			line-height: 30px
+			margin-top: 40px
+		.img 
+			img 
+				width: 285px
+				height: 300px
