--- a/sass/style.sass
+++ b/sass/style.sass
@@ -81,6 +81,7 @@ header
 
 .about
 	margin-top: 100px
+	padding-bottom: 90px
 	.img 
 		width: 305px
 		height: 410px
@@ -123,3 +124,41 @@ header
 			img 
 				width: 285px
 				height: 300px
+.contact
+	padding-top: 90px
+	background-color: #212121
+	color: #fff
+	ul 
+		li 
+			list-style-type: none
+			margin-top: 30px
+			img
+				padding-right: 20px
+				padding-bottom: 5px			
+	ul.social
+		li 
+			display: inline-block
+			list-style-type: none
+	.form
+		h2
+			font-size: 23px
+			color: #b7a176
+		input[type="button"]
+			width: 188px
+			height: 45px
+			background-color: #b7a176
+			color: #fff
+			text-align: center
+			font-size: 16px
+		input[type="text"]
+			border-top: none
+			border-left: none
+			border-right: none
+			border-bottom: 1px solid #7c7c7c
+			background-color: #212121
+			margin-bottom: 20px
+			width: 400px
+			color: #fff
+			margin-top: 10px
+		input[type="text"]:active
+			border: none 
