--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,8 @@ header {
       margin: 0 auto; }
 
 .about {
-  margin-top: 100px; }
+  margin-top: 100px;
+  padding-bottom: 90px; }
   .about .img {
     width: 305px;
     height: 410px; }
@@ -123,3 +124,39 @@ header {
     .about .block_3 .img img {
       width: 285px;
       height: 300px; }
+
+.contact {
+  padding-top: 90px;
+  background-color: #212121;
+  color: #fff; }
+  .contact ul li {
+    list-style-type: none;
+    margin-top: 30px; }
+    .contact ul li img {
+      padding-right: 20px;
+      padding-bottom: 5px; }
+  .contact ul.social li {
+    display: inline-block;
+    list-style-type: none; }
+  .contact .form h2 {
+    font-size: 23px;
+    color: #b7a176; }
+  .contact .form input[type="button"] {
+    width: 188px;
+    height: 45px;
+    background-color: #b7a176;
+    color: #fff;
+    text-align: center;
+    font-size: 16px; }
+  .contact .form input[type="text"] {
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 1px solid #7c7c7c;
+    background-color: #212121;
+    margin-bottom: 20px;
+    width: 400px;
+    color: #fff;
+    margin-top: 10px; }
+  .contact .form input[type="text"]:active {
+    border: none; }
