--- a/sass/style.sass
+++ b/sass/style.sass
@@ -162,3 +162,11 @@ header
 			margin-top: 10px
 		input[type="text"]:active
 			border: none 
+footer 
+	font-size: 15px
+	color: #525252
+	background-color: #131313
+	height: 65px
+	span
+		margin-top: 30px
+		display: inline-block
