--- a/sass/style.sass
+++ b/sass/style.sass
@@ -57,6 +57,7 @@ header
 	padding-top: 90px
 	padding-bottom: 100px
 	background-image: url("../img/bg_2.png")
+	background-repeat: no-repeat
 	h1
 		color: #b7a176
 	.line
@@ -103,6 +104,9 @@ header
 			img 
 				width: 285px
 				height: 300px
+		.img_2
+			img
+				width: 105.7%
 		.center
 			color: #000
 			padding-top: 90px
@@ -150,6 +154,7 @@ header
 			color: #fff
 			text-align: center
 			font-size: 16px
+			display: block					
 		input[type="text"]
 			border-top: none
 			border-left: none
